Added Person resource scaffold
Updated README.md adding Known Problems and Possible Solutions section.
Added some fixes to Employee resource scaffold and added a fixed
reverse_scaffold script.

--- a/app/views/employees/_form.html.erb
+++ b/app/views/employees/_form.html.erb
@@ -12,10 +12,6 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :BusinessEntityID %><br />
-    <%= f.number_field :BusinessEntityID %>
-  </div>
-  <div class="field">
     <%= f.label :NationalIDNumber %><br />
     <%= f.text_field :NationalIDNumber %>
   </div>
@@ -25,7 +21,7 @@
   </div>
   <div class="field">
     <%= f.label :OrganizationNode %><br />
-    <%= f.text_field :OrganizationNode %>
+    <%= f.text_field :parseOrganizationNode %>
   </div>
   <div class="field">
     <%= f.label :OrganizationLevel %><br />
